fixing bubble offscreen when window minimized

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1002,224 +1002,230 @@ button:hover, .button:hover {
 
 /*----regular bubble----*/
 .bubble.reg_blue {
-  left: 6rem;
+  left: 4vw;
   animation: animate 38s linear infinite;
 }
 
 .bubble.reg_light {
-  left: 20rem;
+  left: 20vw;
   animation: animate 25s linear infinite;
 }
 
 .bubble.reg_green {
-  left: 37rem;
+  left: 38vw;
   animation: animate 31s linear infinite;
 }
 
 .bubble.reg_blue2 {
-  left: 50rem;
+  left: 58vw;
   animation: animate 20s linear infinite;
 }
 
 .bubble.reg_light2 {
-  left: 78rem;
+  left: 80vw;
   animation: animate 45s linear infinite;
 }
 
 .bubble.reg_green2 {
-  left: 89rem;
+  left: 95vw;
   animation: animate 24s linear infinite;
 }
 /*----regular bubbles----*/
 
 /*----Top Bubbles----*/
 .bubble.top_blue {
-  left: 8rem;
+  /* left: 8rem; */
+  left: 4vw;
   animation: animateTop 38s linear infinite;
 }
 
 .bubble.top_light {
-  left: 20rem;
+  /* left: 20rem; */
+  left: 20vw;
   animation: animateTop 25s linear infinite;
 }
 
 .bubble.top_green {
-  left: 37rem;
+  /* left: 37rem; */
+  left: 38vw;
   animation: animateTop 31s linear infinite;
 }
 
 .bubble.top_blue2 {
-  left: 60rem;
+  /* left: 60rem; */
+  left: 58vw;
   animation: animateTop 20s linear infinite;
 }
 
 .bubble.top_light2 {
-  left: 75rem;
+  /* left: 75rem; */
+  left: 80vw;
   animation: animateTop 45s linear infinite;
 }
 
 .bubble.top_green2 {
-  left: 88rem;
+  left: 95vw;
+  /* left: 88rem; */
   animation: animateTop 21s linear infinite;
 }
 /*----Top Bubbles----*/
 
 /*----Long Bubbles----*/
 .bubble.long_blue {
-  left: 5rem;
+  left: 5vw;
   animation: animateLong 28s linear infinite;
 }
 
 .bubble.long_light {
-  left: 20rem;
+  left: 20vw;
   animation: animateLong 18s linear infinite;
 }
 
 .bubble.long_green {
-  left: 35rem;
+  left: 35vw;
   animation: animateLong 23s linear infinite;
 }
 
 .bubble.long_blue2 {
-  left: 65rem;
+  left: 65vw;
   animation: animateLong 13s linear infinite;
 }
 
 .bubble.long_light2 {
-  left: 74rem;
+  left: 74vw;
   animation: animateLong 30s linear infinite;
 }
 
 .bubble.long_green2 {
-  left: 90rem;
+  left: 90vw;
   animation: animateLong 15s linear infinite;
 }
 /*----Long Bubbles----*/
 
 /*----Medium 2 Bubbles----*/
 .bubble.med2_blue {
-  left: 5rem;
+  left: 4vw;
   animation: animateMed2 38s linear infinite;
 }
 
 .bubble.med2_light {
-  left: 20rem;
+  left: 20vw;
   animation: animateMed2 25s linear infinite;
 }
 
 .bubble.med2_green {
-  left: 49rem;
+  left: 38vw;
   animation: animateMed2 31s linear infinite;
 }
 
 .bubble.med2_blue2 {
-  left: 69rem; 
+  left: 58vw; 
   animation: animateMed2 20s linear infinite;
 }
 
 .bubble.med2_light2 {
-  left: 80rem;
+  left: 80vw;
   animation: animateMed2 45s linear infinite;
 }
 
 .bubble.med2_green2 {
-  left: 92rem;
+  left: 95vw;
   animation: animateMed2 17s linear infinite;
 }
 /*----Medium 2 Bubbles----*/
 
 /*----Medium Bubbles----*/
 .bubble.med_blue {
-  left: 5rem;
+  left: 4vw;
   animation: animateMed 38s linear infinite;
 }
 
 .bubble.med_light {
-  left: 20rem;
+  left: 20vw;
   animation: animateMed 25s linear infinite;
 }
 
 .bubble.med_green {
-  left: 49rem;
+  left: 38vw;
   animation: animateMed 31s linear infinite;
 }
 
 .bubble.med_blue2 {
-  left: 69rem; 
+  left: 58vw; 
   animation: animateMed 20s linear infinite;
 }
 
 .bubble.med_light2 {
-  left: 80rem;
+  left: 80vw;
   animation: animateMed 45s linear infinite;
 }
 
 .bubble.med_green2 {
-  left: 92rem;
+  left: 95vw;
   animation: animateMed 21s linear infinite;
 }
 /*Medium Bubbles*/
 
 /*Tiny Bubbles*/
 .bubble.tiny_blue {
-  left: 8rem;
+  left: 4vw;
   animation: animateTiny 38s linear infinite;
 }
 
 .bubble.tiny_light {
-  left: 20rem;
+  left: 20vw;
   animation: animateTiny 25s linear infinite;
 }
 
 .bubble.tiny_green {
-  left: 37rem;
+  left: 38vw;
   animation: animateTiny 31s linear infinite;
 }
 
 .bubble.tiny_blue2 {
-  left: 50rem;
+  left: 58vw;
   animation: animateTiny 20s linear infinite;
 }
 
 .bubble.tiny_light2 {
-  left: 75rem;
+  left: 80vw;
   animation: animateTiny 45s linear infinite;
 }
 
 .bubble.tiny_green2 {
-  left: 87rem;
+  left: 95vw;
   animation: animateTiny 21s linear infinite;
 }
 /*Tiny Bubbles*/
 
 /*MTT Bubbles*/
 .bubble.mtt_blue {
-  left: 0rem;
+  left: 0vw;
   animation: animateMTT 28s linear infinite;
 }
 
 .bubble.mtt_light {
-  left: 20rem;
+  left: 20vw;
   animation: animateMTT 15s linear infinite;
 }
 
 .bubble.mtt_green {
-  left: 40rem;
+  left: 40vw;
   animation: animateMTT 21s linear infinite;
 }
 
 .bubble.mtt_blue2 {
-  left: 60rem;
+  left: 60vw;
   animation: animateMTT 10s linear infinite;
 }
 
 .bubble.mtt_light2 {
-  left: 80rem;
+  left: 80vw;
   animation: animateMTT 35s linear infinite;
 }
 
 .bubble.mtt_green2 {
-  left: 90rem;
+  left: 90vw;
   animation: animateMTT 11s linear infinite;
 }
 /*MTT Bubbles*/
@@ -1300,7 +1306,7 @@ button:hover, .button:hover {
   
   @keyframes animateTop{
     0% {
-      transform: translateY(57vh) scale(0);
+      transform: translateY(57vh) scale(20);
     }
     100%{
       transform: translateY(-10vh) scale(120);
@@ -1348,7 +1354,7 @@ button:hover, .button:hover {
       transform: translateY(970vh) scale(20);
     }
     100%{
-      transform: translateY(-10vh) scale(200);
+      transform: translateY(-10vh) scale(180);
     }
   }
 }
